Refactoring SessionReportModel